--- a/cases/integration/v1/test_window_row.yaml
+++ b/cases/integration/v1/test_window_row.yaml
@@ -618,3 +618,216 @@ cases:
         - ["aa",22, 32, 156]
         - ["bb",23, 33, 56]
         - ["bb",24, 34, 114]
+        
+  -
+    id: 27-2
+    desc: window1 expression + window2 expression
+    tags: ["目前属于功能边界外, @chenjing计划支持依赖同类窗口的表达式"]
+    inputs:
+      -
+        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["bb",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3, c4,
+      (sum(c4) over w1 + sum(c3) over w2) as sum_c3_c4_w1 FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW),
+      w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 28
+    desc: 匿名窗口
+    inputs:
+      -
+        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3, sum(c4) OVER (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW) as w1_c4_sum FROM {0};
+    expect:
+      order: c3
+      columns: ["c1 string","c3 int","w1_c4_sum bigint"]
+      rows:
+        - ["aa",20,30]
+        - ["aa",21,61]
+        - ["aa",22,93]
+        - ["aa",23,96]
+        - ["bb",24,34]
+  -
+    id: 29
+    desc: 匿名窗口-没有小括号
+    inputs:
+      -
+        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3, sum(c4) OVER PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW as w1_c4_sum FROM {0};
+    expect:
+      success: false
+  -
+    id: 30
+    desc: smallint为partition by
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","c3 int","w1_c4_sum bigint"]
+      rows:
+        - [1,"aa",20,30]
+        - [2,"bb",20,61]
+        - [3,"cc",20,93]
+        - [4,"dd",20,96]
+        - [5,"ee",21,34]
+  -
+    id: 31
+    desc: bool为partition by
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 bool","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c2:c7"]
+        rows:
+          - [1,"aa",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",true,20,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"cc",true,20,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"dd",true,20,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"ee",false,21,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT id, c1, c2, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c2 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","c2 bool","w1_c4_sum bigint"]
+      rows:
+        - [1,true,20,30]
+        - [2,true,20,61]
+        - [3,true,20,93]
+        - [4,true,20,96]
+        - [5,false,21,34]
+  -
+    id: 32
+    desc: no partition by
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c3:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 33
+    desc: int为order by
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [3,"cc",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [4,"dd",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [5,"ee",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+    sql: |
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c3 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 34
+    desc: smallint为order by
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [3,"cc",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [4,"dd",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [5,"ee",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+    sql: |
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c3 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 35
+    desc: bool为order by
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 bool","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [3,"cc",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [4,"dd",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [5,"ee",false,21,31,1.2,2.2,1590738991000,"2020-05-02"]
+    sql: |
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c2 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 36
+    desc: no order by
+    inputs:
+      -
+        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c8:c4"]
+        rows:
+          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - [2,"bb",20,31,1.1,2.1,1590738990000,"2020-05-01"]
+          - [3,"cc",20,32,1.1,2.1,1590738990000,"2020-05-01"]
+          - [4,"dd",20,33,1.1,2.1,1590738990000,"2020-05-01"]
+          - [5,"ee",21,34,1.2,2.2,1590738991000,"2020-05-02"]
+    sql: |
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c8 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      success: false
+  -
+    id: 37
+    desc: no frame
+    inputs:
+      -
+        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7);
+    expect:
+      success: false
