--- a/cases/integration/v1/expression/test_arithmetic.yaml
+++ b/cases/integration/v1/expression/test_arithmetic.yaml
@@ -1,41 +1,72 @@
 db: test_zw
+debugs: [">-smallint-old"]
 cases:
   - id: 0
     desc: ">-string"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
-        indexs: ["index1:c1:c7"]
+        indexs: ["index1:id:c7"]
         rows:
           - [1,"aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01",true]
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
-        indexs: ["index1:c1:c7"]
+        indexs: ["index1:id:c7"]
         rows:
           - [1,"bb",10,20,30,11.1,12.1,1590738989001,"2020-05-02",false]
-    sql: select {0}.c1>{1}.c1 as b1,{0}.c1>{1}.c2 as b2,{0}.c1>{1}.c3 as b3,{0}.c1>{1}.c4 as b4,{0}.c1>{1}.c5 as b5,{0}.c1>{1}.c6 as b6,{0}.c1>{1}.c7 as b7,{0}.c1>{1}.c8 as b8,{0}.c1>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;;
+    sql: select {0}.c1>{1}.c1 as b1,{0}.c1>{1}.c2 as b2,{0}.c1>{1}.c3 as b3,{0}.c1>{1}.c4 as b4,{0}.c1>{1}.c5 as b5,{0}.c1>{1}.c6 as b6,{0}.c1>{1}.c7 as b7,{0}.c1>{1}.c8 as b8,{0}.c1>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
     expect:
       columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool", "b7 bool", "b8 bool", "b9 bool"]
       rows:
-        - ["aa",3,3,1,1.5,1,2]
+        - [false,true,true,true,true,true,true,true,true]
   - id: 1
     desc: ">-smallint"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
-        indexs: ["index1:c1:c7"]
+        indexs: ["index1:id:c7"]
         rows:
           - [1,"aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01",true]
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
-        indexs: ["index1:c1:c7"]
+        indexs: ["index1:id:c7"]
         rows:
           - [1,"bb",10,20,30,11.1,12.1,1590738989001,"2020-05-02",false]
-    sql: select {0}.c2>{1}.c1 as b1,{0}.c2>{1}.c2 as b2,{0}.c2>{1}.c3 as b3,{0}.c2>{1}.c4 as b4,{0}.c2>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;;
+    dataProvider: ["{0}.c2","{0}.c3"]
+    sql: select d[0]>{1}.c1 as b1,d[0]>{1}.c2 as b2,d[0]>{1}.c3 as b3,d[0]>{1}.c4 as b4,d[0]>{1}.c5 as b5,d[0]>{1}.c6 as b6,d[0]>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
     expect:
-      columns: ["b1 bool","b2 bool","b3 bool","b4 bool", "b9 bool"]
+      columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool","b9 bool"]
       rows:
-        - ["aa",3,3,1,1.5,1,2]
+        - [false,false,false,false,false,false,true]
+#    expect:
+#      dataProvider:
+#        0:
+#          columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool","b9 bool"]
+#          rows:
+#            - [false,false,false,false,false,false,true]
+#        1:
+#          columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool","b9 bool"]
+#          rows:
+#            - [false,false,false,false,false,false,true]
+
+  - id: 1
+    desc: ">-smallint-old"
+    inputs:
+      -
+        columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
+        indexs: ["index1:id:c7"]
+        rows:
+          - [1,"aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01",true]
+      -
+        columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
+        indexs: ["index1:id:c7"]
+        rows:
+          - [1,"bb",10,20,30,11.1,12.1,1590738989001,"2020-05-02",false]
+    sql: select {0}.c2>{1}.c1 as b1,{0}.c2>{1}.c2 as b2,{0}.c2>{1}.c3 as b3,{0}.c2>{1}.c4 as b4,{0}.c2>{1}.c5 as b5,{0}.c2>{1}.c6 as b6,{0}.c2>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
+    expect:
+      columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool","b9 bool"]
+      rows:
+        - [false,false,false,false,false,false,true]
   - id: 2
     desc: ">-int"
     inputs:
@@ -49,7 +80,7 @@ cases:
         indexs: ["index1:c1:c7"]
         rows:
           - [1,"bb",10,20,30,11.1,12.1,1590738989001,"2020-05-02",false]
-    sql: select {0}.c3>{1}.c1 as b1,{0}.c3>{1}.c2 as b2,{0}.c3>{1}.c3 as b3,{0}.c3>{1}.c4 as b4,{0}.c3>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;;
+    sql: select {0}.c3>{1}.c1 as b1,{0}.c3>{1}.c2 as b2,{0}.c3>{1}.c3 as b3,{0}.c3>{1}.c4 as b4,{0}.c3>{1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
     expect:
       columns: ["b1 bool","b2 bool","b3 bool","b4 bool", "b9 bool"]
       rows:
