test: update test

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -7,14 +7,16 @@ ZK_PATH=/standalone
 ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=batchrequest
-BATCH_SIZE=10
+BATCH_SIZE=50
 
 ddlUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt.ddl.txt
 scriptUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt
 relationUrl=http://172.27.128.37:8999/fz_ddl/myhug.relation.txt
 jsonUrl=http://172.27.128.37:8999/fz_ddl/myhug.json.txt
-commonCol=zUserId
-
+#commonCol=reqId,eventTime,index,uUserId,fRequestId,fDisplayRank,fSessionId,nRoomUserNum,nRoomInLm,nRoomInGame,nRequestTime,zSex,zPhoneType,zLongitude,zLatitude,zPosition,zHome,zChannel,zAge,zHasCreatedGroup,zRegTime,zFaceScore,zFansNum,zFollowNum,zGainNum,zSGiftNum,zSWihsperNum,zSChatMsgNum,zLiveAvgLength,zLiveFrequency,zLiveDawn,zLiveMorning,zLiveAfternoon,zLiveEvening,zMaxRGiftNumOneUser,zRGiftUserNum,zLiveMsgNum,zLiveDisharmony,zLiveShareNum,zSmallGiftNum,zBigGiftNum,uSex,uPhoneType,uLongitude,uLatitude,uPosition,uHome,uChannel,uAge,uHasJoinedGroup,uRegTime,uFirstChargeNum,uLatestChargeTime,uRemainDiamondNum,uFansNum,uFollowNum,uGainNum,uSGiftNum,uSWihsperNum,uSChatMsgNum,uLiveSMsgNum,uHasBeenBanned,uSMsgFiltered,uWatchDawn,uWatchMorning,uWatchAfternoon,uWatchEvening,uWatchAvgLength,uEnterRoomFrequency,uTopThreeNum,uWatchSameCity,uPlayGame,uLive,uLmNum,uSBigGiftNum,uSSmallGiftNum,uRGiftUserNum,uWatchTopList,split_id
+#commonCol=zUserId
+commonCol=uUserId,zChannel,uSex,zUserId,uPlayGame,uHasJoinedGroup,eventTime,uWatchMorning,uWatchEvening
+#commonCol=reqId,eventTime,index,uUserId,zUserId,fRequestId,fDisplayRank,fSessionId,nRoomUserNum,nRoomInLm,nRoomInGame,nRequestTime,zSex,zPhoneType,zLongitude,zLatitude,zPosition,zHome,zChannel,zAge,zHasCreatedGroup,zRegTime,zFaceScore,zFansNum,zFollowNum,zGainNum,zSGiftNum,zSWihsperNum,zSChatMsgNum,zLiveAvgLength,zLiveFrequency,zLiveDawn,zLiveMorning,zLiveAfternoon,zLiveEvening,zMaxRGiftNumOneUser,zRGiftUserNum,zLiveMsgNum,zLiveDisharmony,zLiveShareNum,zSmallGiftNum,zBigGiftNum,uSex,uPhoneType,uLongitude,uLatitude,uPosition,uHome,uChannel,uAge,uHasJoinedGroup,uRegTime,uFirstChargeNum,uLatestChargeTime,uRemainDiamondNum,uFansNum,uFollowNum,uGainNum,uSGiftNum,uSWihsperNum,uSChatMsgNum,uLiveSMsgNum,uHasBeenBanned,uSMsgFiltered,uWatchDawn,uWatchMorning,uWatchAfternoon,uWatchEvening,uWatchAvgLength,uEnterRoomFrequency,uTopThreeNum,uWatchSameCity,uPlayGame,uLive,uLmNum,uSBigGiftNum,uSSmallGiftNum,uRGiftUserNum,uWatchTopList,split_id
 #fz5
 #ddlUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.txt.ddl.txt
 #scriptUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.txt
