--- a/cases/benchmark/batch_request_benchmark.yaml
+++ b/cases/benchmark/batch_request_benchmark.yaml
@@ -2,50 +2,84 @@ db: batch_request_bm
 debugs: []
 cases:
   - id: 0
-    desc: batch request with non-trival output common columns, window and join are common
+    desc: batch request with one common window and one non-common window
     mode: cluster-unsupport
     inputs:
       -
-        columns : ["id int","c1 string","c2 int","c3 bigint","c4 float","c5 double","c6 timestamp"]
-        indexs: ["index1:c1:c6", "index2:id:c6"]
+        columns: ["id int","k1 bigint","k2 bigint","k3 timestamp", "k4 timestamp",
+                  "c1 double","c2 double","c3 double","c4 double","c5 double","c6 double"]
+        indexs: ["index1:k1:k3", "index2:k2:k4"]
         repeat: 100
         rows:
-          - [1,"a",1,30,1.0,2.0,1590738990000]
-          - [3,"a",3,32,1.2,2.2,1590738992000]
-          - [5,"a",5,34,1.4,2.4,1590738994000]
-          - [6,"a",6,35,1.5,2.5,1590738995000]
-      -
-        columns : ["id int","timecol timestamp","c1 string", "c7 date","c8 string"]
-        indexs: ["index2:c1:timecol"]
-        repeat: 100
-        rows:
-          - [1,1590738990000,"a","2020-05-01","a"]
-          - [2,1590738991000,"a","2020-05-02","b"]
-          - [3,1590738992000,"a","2020-05-03","c"]
-          - [4,1590738993000,"a","2020-05-04","d"]
-          - [5,1590738994000,"a","2020-05-05","e"]
-          - [6,1590738995000,"a","2020-05-06","f"]
-          - [7,1590738996000,"a","2020-05-07","g"]
+          - [1,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [3,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [5,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [6,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
     batch_request:
-      indexs: ["index1:c1:c6"]
-      common_column_indices: [1,3,6]
-      repeat: 20
-      columns : ["id int","c1 string","c2 int","c3 bigint","c4 float","c5 double","c6 timestamp"]
+      common_column_indices: [1,3,5,6,7]
+      repeat: 100
+      columns : ["id int","k1 bigint","k2 bigint","k3 timestamp", "k4 timestamp",
+                 "c1 double","c2 double","c3 double","c4 double","c5 double","c6 double"]
       rows:
-        - [2,"a",2,31,1.1,2.1,1590738996000]
-        - [4,"a",3,31,1.2,2.2,1590738996000]
-        - [7,"a",4,31,1.3,2.3,1590738996000]
+        - [2,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [4,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [7,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
     sql: |
-      SELECT {0}.id, {0}.c1 as m1, sum(c2) OVER w1 as m2, sum(c3) OVER w1 as m3, sum(c4) OVER w1 as m4,
-            sum(c5) OVER w1 as m5, max(c6) OVER w1 as m6, max(c7) OVER w1 as m7, min(c8) OVER w1 as m8
-      FROM {0} last join {1} order by {1}.timecol on {0}.c1={1}.c1 and {0}.c6={1}.timecol
-      WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c6 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
-    expect:
-      expect:
-      order: id
-      columns: ["id int","m1 string","m2 int","m3 bigint","m4 float","m5 double","m6 timestamp","m7 date","m8 string"]
-      common_column_indices: [1,3,6,7,8]
+      SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3, 
+             sum(c4) over w2 as m4, sum(c5) over w2 as m5, sum(c6) over w2 as m6 
+      FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k3 ROWS BETWEEN 20 PRECEDING AND CURRENT ROW), 
+             w2 AS (PARTITION BY {0}.k2 ORDER BY {0}.k4 ROWS BETWEEN 20 PRECEDING AND CURRENT ROW);
+
+  - id: 1
+    desc: batch request with common window and common and non-common aggregations, window is small
+    mode: cluster-unsupport
+    inputs:
+      -
+        columns: ["id int","k1 bigint","k2 timestamp",
+                  "c1 double","c2 double","c3 double",
+                  "c4 double","c5 double","c6 double"]
+        indexs: ["index1:k1:k2",]
+        repeat: 10
+        rows:
+          - [1,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    batch_request:
+      common_column_indices: [1,2,3,5,7]
+      repeat: 100
+      columns : ["id int","k1 bigint","k2 timestamp",
+                 "c1 double","c2 double","c3 double",
+                 "c4 double","c5 double","c6 double"]
       rows:
-        - [2,"a",13,100,4.0,7.0,1590738996000,"2020-05-07","e"]
-        - [4,"a",14,100,4.1,7.1,1590738996000,"2020-05-07","e"]
-        - [7,"a",15,100,4.2,7.2,1590738996000,"2020-05-07","e"]
+        - [2,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    sql: |
+      SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3, 
+             sum(c4) over w1 as m4, sum(c5) over w1 as m5, sum(c6) over w1 as m6 
+      FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k2 ROWS BETWEEN 20 PRECEDING AND CURRENT ROW);
+
+  - id: 2
+    desc: batch request with common window and common and non-common aggregations, window is large
+    mode: cluster-unsupport
+    inputs:
+      -
+        columns: ["id int","k1 bigint","k2 timestamp",
+                  "c1 double","c2 double","c3 double",
+                  "c4 double","c5 double","c6 double"]
+        indexs: ["index1:k1:k2",]
+        repeat: 1000
+        rows:
+          - [1,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    batch_request:
+      common_column_indices: [1,2,3,5,7]
+      repeat: 100
+      columns : ["id int","k1 bigint","k2 timestamp",
+                 "c1 double","c2 double","c3 double",
+                 "c4 double","c5 double","c6 double"]
+      rows:
+        - [2,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    sql: |
+      SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3, 
+             sum(c4) over w1 as m4, sum(c5) over w1 as m5, sum(c6) over w1 as m6 
+      FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k2 ROWS BETWEEN 20 PRECEDING AND CURRENT ROW);
+
