--- a/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
+++ b/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
@@ -1,8 +1,8 @@
 
 #配置zk地址, 和集群启动配置中的zk_cluster保持一致
-qa_zk_cluster=127.0.0.1:6181
+qa_zk_cluster=172.27.128.37:10009
 #配置集群的zk根路径, 和集群启动配置中的zk_root_path保持一致
-qa_zk_root_path=/onebox
+qa_zk_root_path=/fedb
 
 #配置zk地址, 和集群启动配置中的zk_cluster保持一致
 standalone_zk_cluster=127.0.0.1:6181
