--- a/cases/integration/v1/function/test_udaf_function.yaml
+++ b/cases/integration/v1/function/test_udaf_function.yaml
@@ -1,121 +1,121 @@
 db: test_zw
-debugs: []
+debugs: ["max"]
 cases:
   -
     id: 0
     desc: max
     inputs:
       -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
         indexs: ["index1:c1:c7"]
         rows:
-          - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-          - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-          - [3,"aa",3,32,1.3,2.3,1590738992000,"2020-05-02","b"]
-          - [4,"aa",NULL,NULL,NULL,NULL,1590738993000,NULL,NULL]
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, max(c3) OVER w1 as m3,max(c4) OVER w1 as m4,max(c5) OVER w1 as m5,max(c6) OVER w1 as m6,max(c7) OVER w1 as m7,max(c8) OVER w1 as m8,max(c9) OVER w1 as m9 FROM {0} WINDOW
+      SELECT id, c1, max(c2) OVER w1 as m2,max(c3) OVER w1 as m3,max(c4) OVER w1 as m4,max(c5) OVER w1 as m5,max(c6) OVER w1 as m6,max(c7) OVER w1 as m7,max(c8) OVER w1 as m8,max(c9) OVER w1 as m9,max(c10) OVER w1 as m10 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string"]
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string","m10 bool"]
       rows:
-        - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-        - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-        - [3,"aa",4,33,1.4,2.4,1590738992000,"2020-05-03","c"]
-        - [4,"aa",4,33,1.4,2.4,1590738993000,"2020-05-03","c"]
+        - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+        - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",true]
+        - [3,"aa",4,4,33,1.4,2.4,1590738992000,"2020-05-03","c",true]
+        - [4,"aa",4,4,33,1.4,2.4,1590738993000,"2020-05-03","c",true]
   -
     id: 1
     desc: min
     inputs:
       -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
         indexs: ["index1:c1:c7"]
         rows:
-          - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-          - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-          - [3,"aa",3,32,1.3,2.3,1590738992000,"2020-05-02","b"]
-          - [4,"aa",NULL,NULL,NULL,NULL,1590738993000,NULL,NULL]
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, min(c3) OVER w1 as m3,min(c4) OVER w1 as m4,min(c5) OVER w1 as m5,min(c6) OVER w1 as m6,min(c7) OVER w1 as m7,min(c8) OVER w1 as m8,min(c9) OVER w1 as m9 FROM {0} WINDOW
+      SELECT id, c1, min(c2) OVER w1 as m2,min(c3) OVER w1 as m3,min(c4) OVER w1 as m4,min(c5) OVER w1 as m5,min(c6) OVER w1 as m6,min(c7) OVER w1 as m7,min(c8) OVER w1 as m8,min(c9) OVER w1 as m9,min(c10) OVER w1 as m10 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string"]
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string","m10 bool"]
       rows:
-        - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-        - [2,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-        - [3,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-        - [4,"aa",3,32,1.3,2.3,1590738991000,"2020-05-02","b"]
+        - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+        - [2,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",false]
+        - [3,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",false]
+        - [4,"aa",3,3,32,1.3,2.3,1590738991000,"2020-05-02","b",false]
   -
     id: 2
     desc: count
     inputs:
       -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
+        columns : ["id int","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
         indexs: ["index1:c1:c7"]
         rows:
-          - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-          - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-          - [3,"aa",3,32,1.3,2.3,1590738992000,"2020-05-02","b"]
-          - [4,"aa",NULL,NULL,NULL,NULL,1590738993000,NULL,NULL]
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, count(c3) OVER w1 as m3,count(c4) OVER w1 as m4,count(c5) OVER w1 as m5,count(c6) OVER w1 as m6,count(c7) OVER w1 as m7,count(c8) OVER w1 as m8,count(c9) OVER w1 as m9 FROM {0} WINDOW
+      SELECT id, c1, count(c2) OVER w1 as m2,count(c3) OVER w1 as m3,count(c4) OVER w1 as m4,count(c5) OVER w1 as m5,count(c6) OVER w1 as m6,count(c7) OVER w1 as m7,count(c8) OVER w1 as m8,count(c9) OVER w1 as m9,count(c10) OVER w1 as m10 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m3 bigint","m4 bigint","m5 bigint","m6 bigint","m7 bigint","m8 bigint","m9 bigint"]
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string","m10 bool"]
       rows:
-        - [1,"aa",1,1,1,1,1,1,1]
-        - [2,"aa",2,2,2,2,2,2,2]
-        - [3,"aa",3,3,3,3,3,3,3]
-        - [4,"aa",2,2,2,2,3,2,2]
+        - [1,"aa",1,1,1,1,1,1,1,1,1]
+        - [2,"aa",2,2,2,2,2,2,2,2,2]
+        - [3,"aa",3,3,3,3,3,3,3,3,3]
+        - [4,"aa",2,2,2,2,3,2,2,2,2]
   -
     id: 3
     desc: sum
     inputs:
       -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
         indexs: ["index1:c1:c7"]
         rows:
-          - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-          - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-          - [3,"aa",3,32,1.3,2.3,1590738992000,"2020-05-02","b"]
-          - [4,"aa",NULL,NULL,NULL,NULL,1590738993000,NULL,NULL]
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, sum(c3) OVER w1 as m3,sum(c4) OVER w1 as m4,sum(c5) OVER w1 as m5,sum(c6) OVER w1 as m6 FROM {0} WINDOW
+      SELECT id, c1, sum(c2) OVER w1 as m2,sum(c3) OVER w1 as m3,sum(c4) OVER w1 as m4,sum(c5) OVER w1 as m5,sum(c6) OVER w1 as m6,sum(c10) OVER w1 as m10 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m3 int","m4 bigint","m5 float","m6 double"]
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 smallint"]
       rows:
-        - [1,"aa",1,30,1.1,2.1]
-        - [2,"aa",5,63,2.5,4.5]
-        - [3,"aa",8,95,3.7999997,6.799999999999999]
-        - [4,"aa",7,65,2.7,4.7]
+        - [1,"aa",1,1,30,1.1,2.1,1]
+        - [2,"aa",5,5,63,2.5,4.5,1]
+        - [3,"aa",8,8,95,3.7999997,6.799999999999999,2]
+        - [4,"aa",7,7,65,2.7,4.7,1]
   -
     id: 4
     desc: avg
     inputs:
       -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
         indexs: ["index1:c1:c7"]
         rows:
-          - [1,"aa",1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
-          - [2,"aa",4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
-          - [3,"aa",1,33,1.1,2.1,1590738992000,"2020-05-02","b"]
-          - [4,"aa",NULL,NULL,NULL,NULL,1590738993000,NULL,NULL]
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",1,1,33,1.1,2.1,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, avg(c3) OVER w1 as m3,avg(c4) OVER w1 as m4,avg(c5) OVER w1 as m5,avg(c6) OVER w1 as m6 FROM {0} WINDOW
+      SELECT id, c1, avg(c2) OVER w1 as m2,avg(c3) OVER w1 as m3,avg(c4) OVER w1 as m4,avg(c5) OVER w1 as m5,avg(c6) OVER w1 as m6,avg(c10) OVER w1 as m10 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m3 double","m4 double","m5 double","m6 double"]
+      columns: ["id int","c1 string","m2 double","m3 double","m4 double","m5 double","m6 double","m10 double"]
       rows:
-        - [1,"aa",1,30,1.100000023841858,2.1]
-        - [2,"aa",2.5,31.5,1.25,2.25]
-        - [3,"aa",2,32,1.200000007947286,2.1999999999999997]
-        - [4,"aa",2.5,33,1.25,2.25]
+        - [1,"aa",1,1,30,1.100000023841858,2.1,1]
+        - [2,"aa",2.5,2.5,31.5,1.25,2.25,1.5]
+        - [3,"aa",2,2,32,1.200000007947286,2.1999999999999997,0.666666666666]
+        - [4,"aa",2.5,2.5,33,1.25,2.25,0.33333333333]
   -
     id: 5
     desc: sum-timestamp
@@ -219,7 +219,144 @@ cases:
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       success: false
-
+  -
+    id: 2
+    desc: distinct_count
+    inputs:
+      -
+        columns : ["id int","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-02","c",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, distinct_count(c2) OVER w1 as m2,distinct_count(c3) OVER w1 as m3,distinct_count(c4) OVER w1 as m4,distinct_count(c5) OVER w1 as m5,distinct_count(c6) OVER w1 as m6,distinct_count(c7) OVER w1 as m7,distinct_count(c8) OVER w1 as m8,distinct_count(c9) OVER w1 as m9,distinct_count(c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string","m10 bool"]
+      rows:
+        - [1,"aa",1,1,1,1,1,1,1,1,1]
+        - [2,"aa",2,2,2,2,2,2,2,2,2]
+        - [3,"aa",2,2,2,2,2,2,2,2,2]
+        - [4,"aa",1,1,1,1,1,1,1,1,1]
+  -
+    id: 0
+    desc: MAX_WHERE-normal
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, max_where(c2,c2<4) OVER w1 as m2,max_where(c3,c3<4) OVER w1 as m3,max_where(c4,c4<33) OVER w1 as m4,max_where(c5,c5<=1.3) OVER w1 as m5,max_where(c6,c6!=null) OVER w1 as m6,max_where(c10,c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 bool"]
+      rows:
+        - [1,"aa",1,1,30,1.1,2.1,true]
+        - [2,"aa",1,2,30,1.1,2.3,true]
+        - [3,"aa",2,3,32,1.3,2.3,true]
+        - [4,"aa",3,4,32,1.3,2.3,true]
+  -
+    id: 0
+    desc: MIN_WHERE-normal
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, min_where(c2,c2>2) OVER w1 as m2,min_where(c3,c3>=3) OVER w1 as m3,min_where(c4,c4<33) OVER w1 as m4,min_where(c5,c5<=2) OVER w1 as m5,min_where(c6,c6!=null) OVER w1 as m6,min_where(c10,c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 bool"]
+      rows:
+        - [1,"aa",1,1,30,1.1,2.1,true]
+        - [2,"aa",1,2,30,1.1,2.3,true]
+        - [3,"aa",2,3,32,1.3,2.3,true]
+        - [4,"aa",3,4,32,1.3,2.3,true]
+  -
+    id: 0
+    desc: MAX_WHERE-normal
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, max_where(c2,c2<4) OVER w1 as m2,max_where(c3,c3<4) OVER w1 as m3,max_where(c4,c4<33) OVER w1 as m4,max_where(c5,c5<=1.3) OVER w1 as m5,max_where(c6,c6!=null) OVER w1 as m6,max_where(c10,c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 bool"]
+      rows:
+        - [1,"aa",1,1,30,1.1,2.1,true]
+        - [2,"aa",1,2,30,1.1,2.3,true]
+        - [3,"aa",2,3,32,1.3,2.3,true]
+        - [4,"aa",3,4,32,1.3,2.3,true]
+  -
+    id: 0
+    desc: MAX_WHERE-normal
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, max_where(c2,c2<4) OVER w1 as m2,max_where(c3,c3<4) OVER w1 as m3,max_where(c4,c4<33) OVER w1 as m4,max_where(c5,c5<=1.3) OVER w1 as m5,max_where(c6,c6!=null) OVER w1 as m6,max_where(c10,c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 bool"]
+      rows:
+        - [1,"aa",1,1,30,1.1,2.1,true]
+        - [2,"aa",1,2,30,1.1,2.3,true]
+        - [3,"aa",2,3,32,1.3,2.3,true]
+        - [4,"aa",3,4,32,1.3,2.3,true]
+  -
+    id: 0
+    desc: MAX_WHERE-normal
+    inputs:
+      -
+        columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
+          - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",false]
+          - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
+          - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
+    sql: |
+      SELECT id, c1, max_where(c2,c2<4) OVER w1 as m2,max_where(c3,c3<4) OVER w1 as m3,max_where(c4,c4<33) OVER w1 as m4,max_where(c5,c5<=1.3) OVER w1 as m5,max_where(c6,c6!=null) OVER w1 as m6,max_where(c10,c10) OVER w1 as m10 FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: id
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m10 bool"]
+      rows:
+        - [1,"aa",1,1,30,1.1,2.1,true]
+        - [2,"aa",1,2,30,1.1,2.3,true]
+        - [3,"aa",2,3,32,1.3,2.3,true]
+        - [4,"aa",3,4,32,1.3,2.3,true]
   - id: 11
     desc: arithmetic_and_udf_before_udaf
     inputs:
