--- a/cases/plan/distinct_query.yaml
+++ b/cases/plan/distinct_query.yaml
@@ -10,7 +10,7 @@ cases:
   - id: 3
     desc: SELECT 窗口查询后Distinct
     mode: physical-plan-unsupport
-    sql: SELECT DISTINCT sum(col1) OVER w1 as w1_col1_sum FROM t1 WINDOW w1 AS (PARTITION BY col15 ORDER BY COL5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
+    sql: SELECT DISTINCT sum(col1) OVER w1 as w1_col1_sum FROM t1 WINDOW w1 AS (PARTITION BY col15 ORDER BY COL5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
   - id: 4
     desc: SELECT 去重后统计条数
     mode: physical-plan-unsupport
