--- a/cases/plan/window_query.yaml
+++ b/cases/plan/window_query.yaml
@@ -60,7 +60,7 @@ cases:
       SELECT sum(col2) OVER w2 as w2_col2_sum, sum(col4) OVER w2 as w2_col4_sum, sum(col5) OVER w2 as w2_col5_sum,
       test_sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum, col0, col2, col5, col1, col6 as col6 FROM t1 WINDOW
       w1 AS (PARTITION BY col2 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
-      w2 AS (PARTITION BY col0 ORDER BY col5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
+      w2 AS (PARTITION BY col0 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
   - id: 5
     desc: 单行+三个window+自定义聚合函数,w1和w2命中索引
     sql: |
@@ -134,7 +134,7 @@ cases:
     desc: window RANGE, -1000ms 至当前时刻
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 RANGE BETWEEN 1000 PRECEDING AND CURRENT ROW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1000 PRECEDING AND CURRENT ROW) limit 10;
   - id: 15
     desc: window ROWS, 前1000条到当前条
     sql: |
@@ -149,7 +149,7 @@ cases:
     desc: window RANGE, -1s至当前时刻
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 RANGE BETWEEN 1s PRECEDING AND CURRENT ROW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1s PRECEDING AND CURRENT ROW) limit 10;
   - id: 18
     desc: window ROWS, ROWS_RANGE
     sql: |
