--- a/cases/query/window_query.yaml
+++ b/cases/query/window_query.yaml
@@ -96,7 +96,7 @@ cases:
       sum(col4) OVER w2 as w2_col4_sum, sum(col2) OVER w2 as w2_col2_sum, sum(col5) OVER w2 as w2_col5_sum,
       col6 as col6 FROM t1 WINDOW
       w1 AS (PARTITION BY col2 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
-      w2 AS (PARTITION BY col0 ORDER BY col5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
+      w2 AS (PARTITION BY col0 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
     inputs:
       - name: t1
         resource: cases/resource/simple_t1.yaml
@@ -118,7 +118,7 @@ cases:
       sum(col4) OVER w2 as w2_col4_sum, sum(col2) OVER w2 as w2_col2_sum, sum(col5) OVER w2 as w2_col5_sum,
       col1, col6 as col6 FROM t1 WINDOW
       w1 AS (PARTITION BY col2 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
-      w2 AS (PARTITION BY col0 ORDER BY col5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
+      w2 AS (PARTITION BY col0 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
     inputs:
       - name: t1
         resource: cases/resource/simple_t1.yaml
@@ -140,8 +140,8 @@ cases:
       sum(col4) OVER w3 as w3_col4_sum, sum(col2) OVER w2 as w2_col2_sum, sum(col5) OVER w2 as w2_col5_sum,
       col1, col6 as col6 FROM t1 WINDOW
       w1 AS (PARTITION BY col2 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
-      w2 AS (PARTITION BY col0 ORDER BY col5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
-      w3 AS (PARTITION BY col1 ORDER BY col5 RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
+      w2 AS (PARTITION BY col0 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW),
+      w3 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
     inputs:
       - name: t1
         resource: cases/resource/simple_t1.yaml
